Implementando back-end para consultas

--- a/EcommerceBack/appsettings.json
+++ b/EcommerceBack/appsettings.json
@@ -7,7 +7,7 @@
   },
 
   "ConnectionStrings": {
-    "Conn": "Host=localhost;Port=5432;Database=ecommerce1;Username=postgres;Password=123fatec;"
+    "Conn": "Host=localhost;Port=5432;Database=ecommerce1;Username=postgres;Password=Fire@Water555;"
   },
 
   "AllowedHosts": "*"
