--- a/EcommerceBack/EcommerceBack.csproj
+++ b/EcommerceBack/EcommerceBack.csproj
@@ -7,6 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="Views\PaginaInicial\paginaInicial.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Views\PaginaInicial\PaginaInicial.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Dapper.Contrib" Version="2.0.78" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Npgsql" Version="7.0.4" />
