Nova lógica de Pedidos

--- a/EcommerceBack/EcommerceBack.csproj
+++ b/EcommerceBack/EcommerceBack.csproj
@@ -15,5 +15,9 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Npgsql" Version="7.0.4" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Views\Status_compra_admin\" />
+  </ItemGroup>
   
 </Project>
